# jtag-quartus-ft232h

./: .gitignore  CMakeLists.txt  LICENSE.3rd_party.md  README.md  copy_openocd_files.sh
inc/: jtag_tap_controller.h  jtag_tap_controller.hpp  q_defs.h  shift_reg.hpp  sock_debug.h  sock_debug.hpp
openocd/src/helper/: binarybuffer.c  binarybuffer.h  list.h
openocd/src/jtag/: jtag.h
openocd/src/jtag/drivers/: ftdi.c  mpsse.c
src/: jtag_hw_dummy.c  jtag_hw_dummy.cpp  jtag_hw_otma.cpp  test_mpsse.c
